--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,53 @@ img {
   margin: 0 auto;
   padding: 0 20px;
 }
+
+
+body {
+  background-color: rgb(191, 203, 176);
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pal {
+  width: 40rem;
+  background-color:aliceblue;
+  padding: 5rem 3rem;
+  border-radius: 5px;
+}
+
+input {
+  width: 70%;
+  border: none;
+  outline: none;
+  color:rgb(95, 97, 92);
+  background-color:aliceblue;
+  border-bottom: 2px solid rgb(191, 203, 176);
+  padding: 1rem 5px;
+  font-size: 1.6rem;
+}
+
+button {
+  width:25%;
+  padding: 1rem 5px;
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  color:rgb(95, 97, 92);
+  background-color:rgb(191, 203, 176);
+}
+
+p.result {
+  margin-top: 3.5rem;
+  text-align: center;
+
+  font-size: 2rem;
+  font-weight: 600;
+  color: rgb(95, 97, 92);
+}
